# CRE

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_API.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SKELETON_BUILT.md  pyproject.toml  railway.toml
api/: auth.py  main.py  sidecar_resolver.py  workspace.py
api/models/: schemas.py
api/routes/: compress.py  ingest.py  inject.py  retrieve.py  status.py
cre/: __init__.py  cli.py  config.py  ingestor.py  injector.py  memory.py  retriever.py  sidecar.py  tui.py  vector_store.py
tests/: __init__.py  test_ingestor.py  test_memory.py  test_retriever.py
